# calindora-svn

trunk/: AUTHORS  INSTALL  README  configure.ac
trunk/doc/: file_template.txt
trunk/src/: Calindora.cpp  Calindora.h  ClientFrame.cpp  ClientFrame.h  Core.cpp  Core.h  CoreView.h  Makefile.am  Makefile.in  Server.cpp  Server.h  ServerPanel.cpp  ServerPanel.h  ServerView.h  calindora.cpp
