# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([calindora], [0.0.1])
AM_INIT_AUTOMAKE(1.8)
AC_CONFIG_SRCDIR([src/calindora.cpp])
AM_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
